<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/account_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            />
        <ImageButton
            android:id="@+id/account_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            android:background="@color/none"
            />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Spinner
            android:id="@+id/account_operation_spiner"
            android:layout_width="256dp"
            android:layout_height="56dp"
            android:entries="@array/spinner_acount"
            />
    </android.support.v7.widget.CardView>
    <EditText
        android:id="@+id/account_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:hint="@string/account"
        />
    <EditText
        android:id="@+id/account_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/account_repassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/login_sign"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="@color/background"
        android:text="@string/login"
        />
</LinearLayout>
