<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <RelativeLayout
            android:id="@+id/left_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/main_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:textSize="16sp"
                android:text="@string/not_login"
                android:gravity="center_vertical"
                />
            <ImageView
                android:id="@+id/mian_user_icon"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/head"
                android:scaleType="fitXY"
                android:background="@color/none"

                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:text="@string/not_login"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:text="@string/not_login"
            />
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:text="@string/about"
            />
        <TextView
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:text="@string/exit"
            />
    </LinearLayout>
